Structure of the page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,140 @@
   <title>Design Teardown</title>
 </head>
 <body>
-  
+  <!-- 1st Section -->
+  <div class="1st-container">
+    <article>
+      <a href=#>
+        <div class="profile-section">
+          <img src="" alt="profile picture" />
+          <p></p>
+        </div>
+        <div class="main-section">
+          <h1></h1>
+          <span></span>
+        </div>
+        <div class="tags-section">
+          <ul>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+          </ul>
+        </div>
+      </a>
+    </article>
+    <article>
+      <a href=#>
+        <div class="profile-section">
+          <img src="" alt="profile picture" />
+          <p></p>
+        </div>
+        <div class="main-section">
+          <h1></h1>
+          <span></span>
+        </div>
+        <div class="tags-section">
+          <ul>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+          </ul>
+        </div>
+      </a>
+    </article>
+    <article>
+      <a href=#>
+        <div class="profile-section">
+          <img src="" alt="profile picture" />
+          <p></p>
+        </div>
+        <div class="main-section">
+          <h1></h1>
+          <span></span>
+        </div>
+        <div class="tags-section">
+          <ul>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+          </ul>
+        </div>
+      </a>
+    </article>
+    <article>
+      <a href=#>
+        <div class="profile-section">
+          <img src="" alt="profile picture" />
+          <p></p>
+        </div>
+        <div class="main-section">
+          <h1></h1>
+          <span></span>
+        </div>
+        <div class="tags-section">
+          <ul>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#"><sup></sup></a></li>
+          </ul>
+        </div>
+      </a>
+    </article>
+  </div>
+
+  <!-- 2nd Section  -->
+  <div class="2nd-container">
+    <article>
+      <a href="#">
+        <span></span>
+        <h1></h1>
+        <p></p>
+        <button></button>
+      </a>
+    </article>
+    <article>
+      <a href="#">
+        <span></span>
+        <h1></h1>
+        <p></p>
+        <button></button>
+      </a>
+    </article>
+    <article>
+      <a href="#">
+        <span></span>
+        <h1></h1>
+        <p></p>
+        <button></button>
+      </a>
+    </article>
+  </div>
+
+  <!-- 3rd Section -->
+  <div class="3rd-container">
+    <article>
+      <span></span>
+      <a href="#">
+        <h1></h1>
+      </a>
+      <p></p>
+      <button></button>
+    </article>
+    <article>
+      <span></span>
+      <a href="#">
+        <h1></h1>
+      </a>
+      <p></p>
+      <button></button>
+    </article>
+    <article>
+      <span></span>
+      <a href="#">
+        <h1></h1>
+      </a>
+      <p></p>
+      <button></button>
+    </article>
+  </div>
 </body>
 </html>
