Add profile pictures in HTML

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <article>
       <a href=#>
         <div class="profile-section">
-          <img src="" alt="profile picture" />
-          <p></p>
+          <img src="assets/profile-1.jpg" alt="profile picture" />
+          <p>Kelvin Omereshone</p>
         </div>
         <div class="main-section">
-          <h1></h1>
+          <h1>Mirage JS Deep Dive: Using Mirage JS And Cypress For UI Testing</h1>
           <span></span>
         </div>
         <div class="tags-section">
           <ul>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#">UI<sup>50</sup></a></li>
+            <li><a href="#">API<sup>23</sup></a></li>
+            <li><a href="#">Testing<sup>32</sup></a></li>
           </ul>
         </div>
       </a>
@@ -30,18 +30,18 @@
     <article>
       <a href=#>
         <div class="profile-section">
-          <img src="" alt="profile picture" />
-          <p></p>
+          <img src="assets/profile-2.jpg" alt="profile picture" />
+          <p>Chidi Orji</p>
         </div>
         <div class="main-section">
-          <h1></h1>
+          <h1>Better Reducers With Immer</h1>
           <span></span>
         </div>
         <div class="tags-section">
           <ul>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#">Tools<sup>21</sup></a></li>
+            <li><a href="#">React<sup>76</sup></a></li>
+            <li><a href="#">Javascript<sup>60</sup></a></li>
           </ul>
         </div>
       </a>
@@ -49,18 +49,16 @@
     <article>
       <a href=#>
         <div class="profile-section">
-          <img src="" alt="profile picture" />
-          <p></p>
+          <img src="assets/profile-3.jpg" alt="profile picture" />
+          <p>Drew McLellan</p>
         </div>
         <div class="main-section">
-          <h1></h1>
+          <h1>Smashing Podcast: How Can I Learn React?</h1>
           <span></span>
         </div>
         <div class="tags-section">
           <ul>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#">Smashing Podcast<sup>18</sup></a></li>
           </ul>
         </div>
       </a>
@@ -68,18 +66,18 @@
     <article>
       <a href=#>
         <div class="profile-section">
-          <img src="" alt="profile picture" />
-          <p></p>
+          <img src="assets/profile-4.jpg" alt="profile picture" />
+          <p>Claudio Luis Vera</p>
         </div>
         <div class="main-section">
-          <h1></h1>
+          <h1>Which Video Conferencing Tools Are Most Accessible?</h1>
           <span></span>
         </div>
         <div class="tags-section">
           <ul>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
-            <li><a href="#"><sup></sup></a></li>
+            <li><a href="#">Tools<sup>14</sup></a></li>
+            <li><a href="#">Accesability<sup>20</sup></a></li>
+            <li><a href="#">Communication<sup>11</sup></a></li>
           </ul>
         </div>
       </a>
