Add content to 1st section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="main-section">
           <h1>Mirage JS Deep Dive: Using Mirage JS And Cypress For UI Testing</h1>
-          <span></span>
+          <span class="comment">Leave a comment</span>
         </div>
         <div class="tags-section">
           <ul>
@@ -35,7 +35,7 @@
         </div>
         <div class="main-section">
           <h1>Better Reducers With Immer</h1>
-          <span></span>
+          <span class="comment">Leave a comment</span>
         </div>
         <div class="tags-section">
           <ul>
@@ -54,7 +54,7 @@
         </div>
         <div class="main-section">
           <h1>Smashing Podcast: How Can I Learn React?</h1>
-          <span></span>
+          <span class="comment">Leave a comment</span>
         </div>
         <div class="tags-section">
           <ul>
@@ -71,7 +71,7 @@
         </div>
         <div class="main-section">
           <h1>Which Video Conferencing Tools Are Most Accessible?</h1>
-          <span></span>
+          <span class="comment">Leave a comment</span>
         </div>
         <div class="tags-section">
           <ul>
