Add styles to3rd container

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   </nav>
   <!-- 1st Section -->
   <div class="first-container">
+    <h1 class="title">Don’t Miss These Latest
+      Articles</h1>
     <article>
         <div class="profile-section">
           <p>Kelvin Omereshone</p>
@@ -129,21 +131,10 @@
  <!-- 3rd Section -->
  <div class="third-section">
     <div class="banner-section">
-      <p>
-       1651 smashing members
-       Integer suscipit dignissim nibh non tincidunt. 
-       Nullam non mauris non arcu commodo luctus.Nulla id sollicitudin sapien, ac pharetra elit.
-        Aenean sed turpis vitae nibh blandit eleifend.
-      </p>
-    </div>
-     
-    <div>
-        <p class ="post-section">
-         Sed luctus eget libero vel efficitur.
-         by Author
-         Cras hendrerit pretium augue, sit amet malesuada elit venenatis eu. Proin consequat quam vel velit dignissim tincidunt. Sed convallis felis eu elit 
-         tincidunt ullamcorper. Vivamus in dui et ligula malesuada commodo.
-        </p>
+      <img src="assets/cat-smashing-tv-2.svg" alt="cat carrying a mic" />
+      <h2>New on Smashing TV</h2>
+      <p>A channel where seasoned developers show how they design, build, work and play.</p>
+      <button>See all the upcoming episodes</button>
     </div>
   </div>
   <!-- 4rd Section -->
