Center the title

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   </nav>
   <!-- 1st Section -->
   <div class="first-container">
-    <h1 class="title">Don’t Miss These Latest
-      Articles</h1>
+    <div class="title">
+      <h1>Don’t Miss These Latest<br> Articles</h1>
+    </div>
     <article>
         <div class="profile-section">
           <p>Kelvin Omereshone</p>
