add the 'th section and style it ,add the 5th sectin html

--- a/index.html
+++ b/index.html
@@ -138,6 +138,90 @@
       <button>See all the upcoming episodes</button>
     </div>
   </div>
+
+  <!-- 4rd section -->
+  <div>
+    <div class="blue-section">
+      <h2> JUNE 2020 • SHIPPING NOW</h3>
+      <h1>Meet “Click!”: Encourage Clicks  Without Shady Tricks</h1>
+      <p>Our new book on how to boost business KPIs, build trust and address doubts effectively — 
+         without alienating people along the way. By Paul Boag.</p>
+        <button>jump to table of content</button>
+        <img src="assets/click__homepage-illustration.svg" alt="cat carryin book">
+    </div>
+  </div>
+
+  <!-- 5rd section -->
+  <div class="people-section">
+    <div class="main-section">
+     <p>
+      PERSON OF THE WEEK
+      April Speight (@vogueandcode) has been in the tech industry for seven years after a career in luxury
+       fashion as a menswear stylist and visual merchandiser. Currently a Cloud Advocate at Microsoft, she loves 
+       working with bots and voice-enabled devices and creates new realities within the world of spatial computing.
+       To help others get started on their XR journey, April shares coding tutorials on her site and on her YouTube channel.
+        She has also written a Python programming book for children. Thank you for sharing and caring, dear April!
+     </p>
+    </div>
+    <div class="other-section">
+     <div>
+       <img src="" alt="">
+        <h2>Mark Robbins wrote</h2>
+        <h1>Designing For Email</h1>
+        <p>june 18, 2020 — Do you design and build emails? 
+            Mark Robbins collected some useful tools and resources that
+            help you get the job done.
+         </p>
+     </div>
+     <div>
+        <h2>Matt Zeunert wrote</h2>
+        <h1>Chrome Extension Performance Report</h1>
+        <p>
+           june 17, 2020 — How do Chrome extensions affect browser performance? A test among the 1000 most popular
+           extensions gives insights into CPU consumption, memory consumption, and whether the
+            extension makes pages render more slowly.
+        </p>
+     </div>
+     <div>
+        <h2>Sandrina Pereira wrote</h2>
+        <h1>Building A Styled Select Elemens</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, amet incidunt corporis 
+          tempora cum deserunt eveniet ex tenetur
+           soluta id rerum nulla inventore assumenda enim expedita, blanditiis voluptates aut itaque.
+        </p>
+     </div>
+     <div>
+       <h2>Lisi Linhart wrote</h2>
+       <h1> CSS Variables Performaenc</h1>
+       <p>
+         Lorem ipsum, dolor sit amet 
+         consectetur adipisicing elit. Sunt vel tenetur architecto minus
+        obcaecati eligendi esse explicabo dolorum pariatur. Impedit provident 
+        totam eos similique nisi eligendi numquam laudantium vero corrupti.
+       </p>
+     </div>
+     <div>
+      <h2>Lea Verou wrote</h2>
+      <h1>Hybrid Positioning With CSS Variables</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni rerum
+         temporibus qui, ducimus officiis, eos laborum, inventore cum nostrum minima accusamus
+         distinctio magnam odio eius obcaecati id dolores saepe.
+      </p>
+     </div>
+     <div>
+      <h2>Ethan Marcotte wrote</h2>
+      <h1>Seams And Edges In Responsive Design</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus inventore enim deserunt nesciunt corrupti quas
+         labore? Earum sapiente possimus, sunt nemo quidem praesentium sed molestiae totam, et sequi ducimus provident.
+      </p>
+    </div>
+    </div>
+
+
+  </div>
   <!-- 4rd Section -->
   <div class="fourth-container">
     <article>
