Add style to 6th section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <!-- 4rd section -->
+  <!-- 4th section -->
   <div>
     <div class="blue-section">
       <h2> JUNE 2020 • SHIPPING NOW</h3>
@@ -151,40 +151,51 @@
     </div>
   </div>
 
-  <!-- 5rd section -->
+  <!-- 5th section -->
   <div class="people-section">
     <div class="main-section">
-     <p>
-      PERSON OF THE WEEK
-      April Speight (@vogueandcode) has been in the tech industry for seven years after a career in luxury
-       fashion as a menswear stylist and visual merchandiser. Currently a Cloud Advocate at Microsoft, she loves 
-       working with bots and voice-enabled devices and creates new realities within the world of spatial computing.
-       To help others get started on their XR journey, April shares coding tutorials on her site and on her YouTube channel.
-        She has also written a Python programming book for children. Thank you for sharing and caring, dear April!
-     </p>
+      <div class="main-profile"></div>
+      <div>
+        <h3>PERSON OF THE WEEK</h3>
+        <p>
+          April Speight (@vogueandcode) has been in the tech industry for seven years after a career in luxury
+          fashion as a menswear stylist and visual merchandiser. Currently a Cloud Advocate at Microsoft, she loves 
+          working with bots and voice-enabled devices and creates new realities within the world of spatial computing.
+          To help others get started on their XR journey, April shares coding tutorials on her site and on her YouTube channel.
+            She has also written a Python programming book for children. Thank you for sharing and caring, dear April!
+        </p>
+      </div>
     </div>
     <div class="other-section">
      <div>
-       <img src="" alt="">
-        <h2>Mark Robbins wrote</h2>
-        <h1>Designing For Email</h1>
-        <p>june 18, 2020 — Do you design and build emails? 
+        <div class="profile">
+          <div class="other-profile"></div>
+            <span>Mark Robbins wrote</span>
+            <h3>Designing For Email</h3>
+        </div>
+        <p>June 18, 2020 — Do you design and build emails? 
             Mark Robbins collected some useful tools and resources that
             help you get the job done.
          </p>
      </div>
      <div>
-        <h2>Matt Zeunert wrote</h2>
-        <h1>Chrome Extension Performance Report</h1>
+       <div class="profile">
+        <div class="other-profile"></div>
+          <span>Matt Zeunert wrote</span>
+          <h3>Chrome Extension Performance Report</h3>
+        </div>
         <p>
-           june 17, 2020 — How do Chrome extensions affect browser performance? A test among the 1000 most popular
+           June 17, 2020 — How do Chrome extensions affect browser performance? A test among the 1000 most popular
            extensions gives insights into CPU consumption, memory consumption, and whether the
             extension makes pages render more slowly.
         </p>
      </div>
      <div>
-        <h2>Sandrina Pereira wrote</h2>
-        <h1>Building A Styled Select Elemens</h1>
+       <div class="profile">
+        <div class="other-profile"></div>
+          <span>Sandrina Pereira wrote</span>
+          <h3>Building A Styled Select Elemens</h3>
+        </div>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, amet incidunt corporis 
           tempora cum deserunt eveniet ex tenetur
@@ -192,8 +203,11 @@
         </p>
      </div>
      <div>
-       <h2>Lisi Linhart wrote</h2>
-       <h1> CSS Variables Performaenc</h1>
+       <div class="profile">
+        <div class="other-profile"></div>
+        <span>Lisi Linhart wrote</span>
+        <h3> CSS Variables Performaenc</h3>
+       </div>
        <p>
          Lorem ipsum, dolor sit amet 
          consectetur adipisicing elit. Sunt vel tenetur architecto minus
@@ -202,63 +216,65 @@
        </p>
      </div>
      <div>
-      <h2>Lea Verou wrote</h2>
-      <h1>Hybrid Positioning With CSS Variables</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni rerum
-         temporibus qui, ducimus officiis, eos laborum, inventore cum nostrum minima accusamus
-         distinctio magnam odio eius obcaecati id dolores saepe.
-      </p>
+        <div class="profile">
+          <div class="other-profile"></div>
+          <span>Lea Verou wrote</span>
+          <h3>Hybrid Positioning With CSS Variables</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni rerum
+          temporibus qui, ducimus officiis, eos laborum, inventore cum nostrum minima accusamus
+          distinctio magnam odio eius obcaecati id dolores saepe.
+        </p>
      </div>
      <div>
-      <h2>Ethan Marcotte wrote</h2>
-      <h1>Seams And Edges In Responsive Design</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus inventore enim deserunt nesciunt corrupti quas
-         labore? Earum sapiente possimus, sunt nemo quidem praesentium sed molestiae totam, et sequi ducimus provident.
-      </p>
+        <div class="profile">
+          <div class="other-profile"></div>
+          <span>Ethan Marcotte wrote</span>
+          <h3>Seams And Edges In Responsive Design</h3>
+        </div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus inventore enim deserunt nesciunt corrupti quas
+          labore? Earum sapiente possimus, sunt nemo quidem praesentium sed molestiae totam, et sequi ducimus provident.
+        </p>
+      </div>
     </div>
-    </div>
-
-
   </div>
-  <!-- 4rd Section -->
-  <div class="fourth-container">
-    <article>
-        <h1>
-          JavaScript & Frameworks
-        </h1>
-      </a>
+  <!-- 6th Section -->
+  <div class="sixth-container">
+    <div>
+      <h1>
+        JavaScript & Frameworks
+      </h1>
       <p>
         React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript 
         developer working with one of these frameworks, 
         or just starting to learn, our authors have created some tutorials for you.
       </p>
- 
-    </article>
-    <article>
-        <h1>
-          JavaScript & Frameworks
-        </h1>
-      </a>
+      <button>Explore JavaScript & Frameworks</button>
+    </div>
+    <div>
+      <h1>
+        CSS Layout
+      </h1>
       <p>
-        React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript 
-        developer working with one of these frameworks, 
-        or just starting to learn, our authors have created some tutorials for you.
+        CSS Layout has been transformed over the past years. 
+        We have you covered with all you need to master this new world. 
+        If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help.
       </p>
- 
-    </article>
-    <article>
-        <h1>
-          JavaScript & Frameworks
-        </h1>
-      </a>
+      <button>Explore CSS Layout</button>
+    </div>
+    <div>
+      <h1>
+        Web Performance
+      </h1>
       <p>
-        React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript 
-        developer working with one of these frameworks, 
-        or just starting to learn, our authors have created some tutorials for you.
+        Ensuring your site loads quickly is important. 
+        The subject touches almost every part of web design and development, from your choice of images to the performance of your web server. 
+        In this guide we bring together information that can help you build a fast site, and keep it fast.
       </p>
-    </article>
+      <button>Explore Performance</button>
+    </div>
   </div>
 </body>
 <footer>
