add more stayle to the 6th section and add the newslettre and style it ,add some styles to the footer

--- a/index.html
+++ b/index.html
@@ -275,6 +275,22 @@
       </p>
       <button>Explore Performance</button>
     </div>
+    <div class="newsletter-container">  
+      <img src="assets/ny20.png" alt="happy cat">
+      <h1>
+        Email Newsletter
+      </h1>
+      <p>
+        Every second Tuesday, we send an email newsletter with useful techniques on 
+        front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.
+      </p>
+      <div class="email-btn"> 
+        <input type="email">
+        <button>Meaw</button>
+      </div>
+      
+      
+    </div>
   </div>
 </body>
 <footer>
@@ -290,6 +306,8 @@
     <li>lorem</li>
     <li>lorem</li>
     <li>lorem</li>
+  </ul>
+  <ul>
     <li>lorem</li>
     <li>lorem</li>
     <li>lorem</li>
@@ -300,10 +318,18 @@
     <li>lorem</li>
     <li>lorem</li>
     <li>lorem</li>
+    </ul>
+    <ul>
     <li>lorem</li>
     <li>lorem</li>
     <li>lorem</li>
     <li>lorem</li>
   </ul>
+  
+    <p> With a commitment to quality content for the design community.</p>
+    Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
+   <p>Smashing is proudly running on Netlify.</p>
+   <p>Fonts by Latinotype.</p> 
+ 
 </footer>
 </html>
