Resolve linter errors

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design Teardown</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
   <nav>
     <div>
       <ul>
           <li class="logo">
-            Smashing Magazine
+            <img src="assets/logo.svg" alt="Smashing Logo" />
           </li>
           <li>Articles</li>
           <li>Guides</li>
@@ -135,18 +136,18 @@
       <img src="assets/cat-smashing-tv-2.svg" alt="cat carrying a mic" />
       <h2>New on Smashing TV</h2>
       <p>A channel where seasoned developers show how they design, build, work and play.</p>
-      <button>See all the upcoming episodes</button>
+      <button type="submit">See all the upcoming episodes</button>
     </div>
   </div>
 
   <!-- 4th section -->
   <div>
     <div class="blue-section">
-      <h2> JUNE 2020 • SHIPPING NOW</h3>
+      <h3>JUNE 2020 • SHIPPING NOW</h3>
       <h1>Meet “Click!”: Encourage Clicks  Without Shady Tricks</h1>
       <p>Our new book on how to boost business KPIs, build trust and address doubts effectively — 
          without alienating people along the way. By Paul Boag.</p>
-        <button>jump to table of content</button>
+        <button type="submit">jump to table of content</button>
         <img src="assets/click__homepage-illustration.svg" alt="cat carryin book">
     </div>
   </div>
@@ -251,7 +252,7 @@
         developer working with one of these frameworks, 
         or just starting to learn, our authors have created some tutorials for you.
       </p>
-      <button>Explore JavaScript & Frameworks</button>
+      <button type="submit">Explore JavaScript & Frameworks</button>
     </div>
     <div>
       <h1>
@@ -262,7 +263,7 @@
         We have you covered with all you need to master this new world. 
         If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help.
       </p>
-      <button>Explore CSS Layout</button>
+      <button type="submit">Explore CSS Layout</button>
     </div>
     <div>
       <h1>
@@ -273,7 +274,7 @@
         The subject touches almost every part of web design and development, from your choice of images to the performance of your web server. 
         In this guide we bring together information that can help you build a fast site, and keep it fast.
       </p>
-      <button>Explore Performance</button>
+      <button type="submit">Explore Performance</button>
     </div>
     <div class="newsletter-container">  
       <img src="assets/ny20.png" alt="happy cat">
@@ -284,52 +285,39 @@
         Every second Tuesday, we send an email newsletter with useful techniques on 
         front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.
       </p>
-      <div class="email-btn"> 
-        <input type="email">
-        <button>Meaw</button>
-      </div>
-      
-      
     </div>
   </div>
-</body>
-<footer>
-  <h1>
-    BROWSE ALL SMASHING MAGAZINE TOPICS
-  </h1>
-  <ul>
-    <li>Accessibility</li>
-    <li>Android</li>
-    <li>Animation</li>
-    <li>Apps</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-  </ul>
-  <ul>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    </ul>
-    <ul>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-    <li>lorem</li>
-  </ul>
-  
-    <p> With a commitment to quality content for the design community.</p>
-    Founded by Vitaly Friedman and Sven Lennartz. 2006–2020.
-   <p>Smashing is proudly running on Netlify.</p>
-   <p>Fonts by Latinotype.</p> 
- 
-</footer>
+    <footer>
+      <h1>
+        BROWSE ALL SMASHING MAGAZINE TOPICS
+      </h1>
+      <ul>
+        <li><a href="#">Application</a></li>
+        <li><a href="#">Android</a></li>
+        <li><a href="#">Javascript</a></li>
+        <li><a href="#">Animation</a></li>
+        <li><a href="#">React</a></li>
+        <li><a href="#">Photoshop</a></li>
+        <li><a href="#">Designer</a></li>
+        <li><a href="#">UI</a></li>
+        <li><a href="#">UX</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Apps</a></li>
+        <li><a href="#">Mobile</a></li>
+        <li><a href="#">Pattern Libraries</a></li>
+        <li><a href="#">Typography</a></li>
+        <li><a href="#">Wallpapers</a></li>
+        <li><a href="#">WordPress</a></li>
+        <li><a href="#">Workflow</a></li>
+      </ul>
+        <ul>
+        <li><a href="#">Plugins</a></li>
+        <li><a href="#">Performance</a></li>
+        <li><a href="#">Responsive Web Design</a></li>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">Graphics</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
