Resolved all the HTML Warnings

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- 1st Section -->
   <div class="first-container">
     <div class="title">
-      <h1>Don’t Miss These Latest<br> Articles</h1>
+      <h2>Don’t Miss These Latest<br> Articles</h2>
     </div>
     <article>
         <div class="profile-section">
@@ -35,7 +35,7 @@
           <p>Kelvin Omereshone</p>
         </div>
         <div class="main-section">
-          <h1>Mirage JS Deep Dive: Using Mirage JS And Cypress For UI Testing</h1>
+          <h2>Mirage JS Deep Dive: Using Mirage JS And Cypress For UI Testing</h2>
         </div>
         <div class="tags-section">
         </div>
@@ -46,7 +46,7 @@
           <p>Chidi Orji</p>
         </div>
         <div class="main-section">
-          <h1>Better Reducers With Immer</h1>
+          <h2>Better Reducers With Immer</h2>
         </div>
         <div class="tags-section">
         </div>
@@ -57,7 +57,7 @@
           <p>Drew McLellan</p>
         </div>
         <div class="main-section">
-          <h1>Smashing Podcast: How Can I Learn React?</h1>
+          <h2>Smashing Podcast: How Can I Learn React?</h2>
         </div>
         <div class="tags-section">
          
@@ -69,7 +69,7 @@
           <p>Claudio Luis Vera</p>
         </div>
         <div class="main-section">
-          <h1>Which Video Conferencing Tools Are Most Accessible?</h1>
+          <h2>Which Video Conferencing Tools Are Most Accessible?</h2>
         </div>
         <div class="tags-section">
         
@@ -80,7 +80,7 @@
   <!-- 2nd Section  -->
   <div class="second-container">
     <article>
-      <h1>Building A Facial Recognition</h1>
+      <h2>Building A Facial Recognition</h2>
       <p> explains how to build a facial recognition web app with React by using the Face Recognition API,
           as well as the Face Detection model and Predict API. The app built in this article is similar to
           the face detection box on a pop-up camera in a mobile phone — it’s able
@@ -89,7 +89,7 @@
     </article>
     <article>
       <span></span>
-      <h1>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough</h1>
+      <h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough</h2>
       <p>
         In this article, we will build a facial recognition web app with the help of 
         React and the Face Recognition API,
@@ -98,14 +98,14 @@
     </article>
     <article>
       <span></span>
-      <h1>From Static Sites To End User JAMstack Apps With FaunaDB</h1>
+      <h2>From Static Sites To End User JAMstack Apps With FaunaDB</h2>
       <p>
         and then extend that functionality in a full-fledged app using Auth0, 
         FaunaDB’s Token system and User-Defined Functions.
       </p>
     </article>
     <article>
-      <h1>Building A Facial Recognition</h1>
+      <h2>Building A Facial Recognition</h2>
       <p> explains how to build a facial recognition web app with React by using the Face Recognition API,
           as well as the Face Detection model and Predict API. The app built in this article is similar to
           the face detection box on a pop-up camera in a mobile phone — it’s able
@@ -114,7 +114,7 @@
     </article>
     <article>
       <span></span>
-      <h1>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough</h1>
+      <h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough</h2>
       <p>
         In this article, we will build a facial recognition web app with the help of 
         React and the Face Recognition API,
@@ -123,7 +123,7 @@
     </article>
     <article>
       <span></span>
-      <h1>From Static Sites To End User JAMstack Apps With FaunaDB</h1>
+      <h2>From Static Sites To End User JAMstack Apps With FaunaDB</h2>
       <p>
         and then extend that functionality in a full-fledged app using Auth0, 
         FaunaDB’s Token system and User-Defined Functions.
@@ -137,7 +137,7 @@
       <img src="assets/cat-smashing-tv-2.svg" alt="cat carrying a mic" />
       <h2>New on Smashing TV</h2>
       <p>A channel where seasoned developers show how they design, build, work and play.</p>
-      <button type="submit">See all the upcoming episodes</button>
+      <button type="button">See all the upcoming episodes</button>
     </div>
   </div>
 
@@ -145,10 +145,10 @@
   <div>
     <div class="blue-section">
       <h3>JUNE 2020 • SHIPPING NOW</h3>
-      <h1>Meet “Click!”: Encourage Clicks  Without Shady Tricks</h1>
+      <h2>Meet “Click!”: Encourage Clicks  Without Shady Tricks</h2>
       <p>Our new book on how to boost business KPIs, build trust and address doubts effectively — 
          without alienating people along the way. By Paul Boag.</p>
-        <button type="submit">jump to table of content</button>
+        <button type="button">jump to table of content</button>
         <img src="assets/click__homepage-illustration.svg" alt="cat carryin book">
     </div>
   </div>
@@ -250,50 +250,50 @@
       Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design system to create great digital products. 
       With common traps, gotchas and lessons learned.
     </p>
-    <button>
+    <button type="button">
       Jump to table of contents
     </button>
   </section>
   <!-- 6th Section -->
   <div class="sixth-container">
     <div>
-      <h1>
+      <h2>
         JavaScript & Frameworks
-      </h1>
+      </h2>
       <p>
         React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript 
         developer working with one of these frameworks, 
         or just starting to learn, our authors have created some tutorials for you.
       </p>
-      <button type="submit">Explore JavaScript & Frameworks</button>
+      <button type="button">Explore JavaScript & Frameworks</button>
     </div>
     <div>
-      <h1>
+      <h2>
         CSS Layout
-      </h1>
+      </h2>
       <p>
         CSS Layout has been transformed over the past years. 
         We have you covered with all you need to master this new world. 
         If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help.
       </p>
-      <button type="submit">Explore CSS Layout</button>
+      <button type="button">Explore CSS Layout</button>
     </div>
     <div>
-      <h1>
+      <h2>
         Web Performance
-      </h1>
+      </h2>
       <p>
         Ensuring your site loads quickly is important. 
         The subject touches almost every part of web design and development, from your choice of images to the performance of your web server. 
         In this guide we bring together information that can help you build a fast site, and keep it fast.
       </p>
-      <button type="submit">Explore Performance</button>
+      <button type="button">Explore Performance</button>
     </div>
     <div class="newsletter-container">  
       <img src="assets/ny20.png" alt="happy cat">
-      <h1>
+      <h2>
         Email Newsletter
-      </h1>
+      </h2>
       <p>
         Every second Tuesday, we send an email newsletter with useful techniques on 
         front-end and UX. Subscribe and get Smart Interface Design Checklists PDF in your inbox.
@@ -301,9 +301,9 @@
     </div>
   </div>
     <footer>
-      <h1>
+      <h2>
         BROWSE ALL SMASHING MAGAZINE TOPICS
-      </h1>
+      </h2>
       <ul>
         <li><a href="#">Application</a></li>
         <li><a href="#">Android</a></li>
